[gd_scene load_steps=18 format=3 uid="uid://co2yk1rkb2o2j"]

[ext_resource type="Script" uid="uid://70v1h8mp57e" path="res://Script/fx_explosion.gd" id="1_w8ob6"]
[ext_resource type="Material" uid="uid://db8g0cp30dsja" path="res://Scene/smoke_particle.tres" id="3_70tkk"]
[ext_resource type="PackedScene" uid="uid://c5jvtt7nlhdmg" path="res://Scene/fx_blink.tscn" id="3_kou1b"]

[sub_resource type="Gradient" id="Gradient_70tkk"]
offsets = PackedFloat32Array(0, 0.482935)
colors = PackedColorArray(1, 0.376471, 0, 1, 0.16154, 0.0337928, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_kou1b"]
gradient = SubResource("Gradient_70tkk")

[sub_resource type="Curve" id="Curve_kou1b"]
_limits = [0.0, 30.0, 0.0, 1.0]
_data = [Vector2(0, 30), 0.0, 0.0, 0, 0, Vector2(0.501634, 30), 0.0, 0.0, 0, 0, Vector2(0.753268, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_2m66g"]
curve = SubResource("Curve_kou1b")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_y823t"]
lifetime_randomness = 0.2
direction = Vector3(-0.5, -1, 0)
spread = 30.0
initial_velocity_min = 500.0
initial_velocity_max = 1000.0
gravity = Vector3(0, 980, 0)
scale_min = 15.0
scale_max = 30.0
color = Color(1, 0.376471, 0, 1)
color_ramp = SubResource("GradientTexture1D_kou1b")
emission_curve = SubResource("CurveTexture_2m66g")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_th0vu"]
lifetime_randomness = 0.2
direction = Vector3(0.5, -1, 0)
spread = 30.0
initial_velocity_min = 500.0
initial_velocity_max = 1000.0
gravity = Vector3(0, 980, 0)
scale_min = 15.0
scale_max = 30.0
color = Color(1, 0.376471, 0, 1)
color_ramp = SubResource("GradientTexture1D_kou1b")
emission_curve = SubResource("CurveTexture_2m66g")

[sub_resource type="Curve" id="Curve_t264x"]
_data = [Vector2(0.637255, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_jbhpk"]
curve = SubResource("Curve_t264x")

[sub_resource type="Curve" id="Curve_70tkk"]
_limits = [0.0, 5.0, 0.0, 1.0]
_data = [Vector2(0, 0.00687146), 0.0, 11.9168, 0, 0, Vector2(0.240343, 2.47777), -3.04229, 0.0, 0, 0, Vector2(1, 0.77015), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_kou1b"]
curve = SubResource("Curve_70tkk")

[sub_resource type="Curve" id="Curve_46lp1"]
_limits = [100.0, 3000.0, 0.0, 1.0]
_data = [Vector2(0, 3000), 0.0, 0.0, 0, 0, Vector2(0.172, 100), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_t264x"]
curve = SubResource("Curve_46lp1")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_70tkk"]
lifetime_randomness = 1.0
particle_flag_disable_z = true
angle_min = -720.0
angle_max = 720.0
direction = Vector3(0, -1, 0)
spread = 90.0
initial_velocity_min = 1000.0
initial_velocity_max = 3000.0
angular_velocity_min = -90.0
angular_velocity_max = 90.0
velocity_limit_curve = SubResource("CurveTexture_t264x")
gravity = Vector3(0, 0, 0)
scale_min = 300.0
scale_max = 300.0
scale_curve = SubResource("CurveTexture_kou1b")
alpha_curve = SubResource("CurveTexture_jbhpk")

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_w8ob6"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:direction")
properties/1/spawn = true
properties/1/replication_mode = 1

[node name="FxExplosion" type="Node2D"]
z_index = 100
script = ExtResource("1_w8ob6")

[node name="RadialLeft" type="GPUParticles2D" parent="."]
emitting = false
amount = 10
lifetime = 3.0
one_shot = true
explosiveness = 1.0
randomness = 1.0
fixed_fps = 60
interpolate = false
visibility_rect = Rect2(-50000, -100, 100000, 200)
process_material = SubResource("ParticleProcessMaterial_y823t")

[node name="RadialRight" type="GPUParticles2D" parent="."]
emitting = false
amount = 10
lifetime = 3.0
one_shot = true
explosiveness = 1.0
randomness = 1.0
fixed_fps = 60
interpolate = false
visibility_rect = Rect2(-50000, -100, 100000, 200)
process_material = SubResource("ParticleProcessMaterial_th0vu")

[node name="Smoke" type="GPUParticles2D" parent="."]
material = ExtResource("3_70tkk")
emitting = false
amount = 100
lifetime = 5.0
one_shot = true
explosiveness = 1.0
interpolate = false
visibility_rect = Rect2(-50000, -100, 100000, 200)
process_material = SubResource("ParticleProcessMaterial_70tkk")

[node name="FxBlink" parent="." instance=ExtResource("3_kou1b")]

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_w8ob6")
